--- a/3. SW Expert Academy/D1.ipynb
+++ b/3. SW Expert Academy/D1.ipynb
@@ -471,39 +471,193 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "###  1938. 아주 간단한 계산기"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8 3\n",
+      "11\n",
+      "5\n",
+      "24\n",
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = list(map(int, input().split()))\n",
+    "print(n[0]+n[1])\n",
+    "print(n[0]-n[1])\n",
+    "print(n[0]*n[1])\n",
+    "print(int(n[0]/n[1]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1933. 간단한 N의 약수"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "1 2 5 10\n"
+     ]
+    }
+   ],
+   "source": [
+    "N = int(input())\n",
+    "result = [div_num for div_num in range(1, N+1) if not N % div_num]\n",
+    "print(' '.join(list(map(str, sorted(result)))))"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "1 2 5 10 "
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[None, None, None, None]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "k=int(input())\n",
+    "[print(f'{i} ',end='') for i in range(1,k+1) if k%i==0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1936. 1대1 가위바위보"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3 2\n",
+      "A\n"
+     ]
+    }
+   ],
+   "source": [
+    "AB = list(map(int, input().split()))\n",
+    "if (AB[0]-AB[1]) == 1 or (AB[0]-AB[1]) == -2:\n",
+    "    print('A')\n",
+    "elif (AB[0]-AB[1]) == -1 or (AB[0]-AB[1]) == 2:\n",
+    "    print('B')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2019. 더블더블"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7\n",
+      "1 2 4 8 16 32 64 128 "
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[None, None, None, None, None, None, None, None]"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n = int(input())\n",
+    "[print(f'{2**i} ',end = '') for i in range(n+1)]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1545. 거꾸로 출력해 보아요"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8\n",
+      "8 7 6 5 4 3 2 1 0 "
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[None, None, None, None, None, None, None, None, None]"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n = int(input())\n",
+    "[print(f'{n-i} ',end='')for i in range(n+1)]"
+   ]
   }
  ],
  "metadata": {
