--- a/1. PS/1.1 Backjoon/8. 규칙찾기.ipynb
+++ b/1. PS/1.1 Backjoon/8. 규칙찾기.ipynb
@@ -140,6 +140,153 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 10250 ACM 호텔"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "4 4 16\n",
+      "(4, 0)\n",
+      "404\n",
+      "99 99 9801\n",
+      "(99, 0)\n",
+      "9999\n"
+     ]
+    }
+   ],
+   "source": [
+    "T = int(input())\n",
+    "result = 0\n",
+    "for i in range(T):\n",
+    "    hwn = list(map(int, input().split()))\n",
+    "    modded = divmod(hwn[2], hwn[0])\n",
+    "    if modded[1]:\n",
+    "        print(modded[1] * 100 + modded[0] + 1)\n",
+    "    else:\n",
+    "        print(hwn[0] * 100 + modded[0])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2775 부녀회장이 될테야"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "T = int(input())\n",
+    "for i in range(T):\n",
+    "    k = int(input())\n",
+    "    n = int(input())\n",
+    "    result = [[1,2,3,4,5,6,7,8,9,10,11,12,13,14]]\n",
+    "    rooms = []\n",
+    "    for floor in range(1, k+1):\n",
+    "        for room in range(1, n+1):\n",
+    "            rooms.append()\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
