--- a/1. PS/1.1 Backjoon/8. 규칙찾기.ipynb
+++ b/1. PS/1.1 Backjoon/8. 규칙찾기.ipynb
@@ -364,6 +364,66 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 알고리즘 수업"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8 [4, 2, 0, 0, 6, 0, 7, 0] 7\n",
+      "7 [2, 0, 0, 6, 0, 7, 0] 5\n",
+      "6 [0, 0, 6, 0, 7, 0] 4\n",
+      "5 [0, 6, 0, 7, 0] 0\n",
+      "4 [6, 0, 7, 0] 0\n",
+      "3 [0, 7, 0] 2\n",
+      "2 [7, 0] 0\n",
+      "1 [0] 1\n",
+      "0 [] 0\n",
+      "[7, 4, 2, 0, 0, 6, 0, 7, 0] 7\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "\n",
+    "# data = [0]*100\n",
+    "# for i in range(0, 100):\n",
+    "#     ran_val = random.randint(0,100)\n",
+    "#     data[i] = ran_val\n",
+    "\n",
+    "data=[7,4,2,0,0,6,0,7,0]\n",
+    "    \n",
+    "max_fall = 0\n",
+    "for idx, val in enumerate(data):\n",
+    "    fall = len(data) - (idx + 1)\n",
+    "    for n_val in data[idx+1:]:\n",
+    "        if val <= n_val:\n",
+    "            fall -= 1\n",
+    "    if max_fall <= fall:\n",
+    "        max_fall = fall\n",
+    "print(data, max_fall)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(10): #testcase\n",
+    "    "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
