--- a/C9 환경설정.md
+++ b/C9 환경설정.md
@@ -6,15 +6,15 @@
 
 ### 1. pyenv 설정
 
-> `pyenv` : 하나의 컴퓨터 내에서 여러가지 버전의 python을 사용할 수 있도록 버전관리를 도와준다.
->
-> `pyenv global` : 전체 전역 파이썬 버전 설정
->
-> `pyenv local `: 해당 디렉토리 파이썬 버전 설정
+- `pyenv` : 하나의 컴퓨터 내에서 여러가지 버전의 python을 사용할 수 있도록 버전관리를 도와준다.
 
-먼저 `c9.io/login` 페이지 접속 - `workspace` 생성 (`blank`로 생성해야 함)
+- `pyenv global` : 전체 전역 파이썬 버전 설정
 
-아래 명령어 복사(알아서 진행 됨)
+- `pyenv local `: 해당 디렉토리 파이썬 버전 설정
+
+> 먼저 `c9.io/login` 페이지 접속 - `workspace` 생성 (`blank`로 생성해야 함)
+
+> 아래 명령어 복사(알아서 진행 됨)
 
 ```powershell
 git clone https://github.com/pyenv/pyenv.git ~/.pyenv
