--- a/6. Job/이론 정리.md
+++ b/6. Job/이론 정리.md
@@ -45,4 +45,260 @@
 
 - 충돌 해결 방법 - Open Address 방식 :  Collision 발생 시 데이터를 저장할 장소를 찾아 헤맨다. Linear Probing, Quadratic Probing, Double hashing Probing 3가지가 있다.
 - 충돌 해결 방법 - Separate Chaining 방식 : Open Address보다 빠르다. Open Address는 해시 버킷의 밀도가 높아질 수록 Collision이 발생할 확률이 높다. Linked List, Red-Black Tree의 2가지 방식이 있다.
+
+###### 구현해보자
+
+#### Graph
+
+- DFS탐색 : O(V+E)
+- BFS탐색 : O(V+E)
+- Spanning Tree : 그래프의 모든 vertex가 cycle이 없이 연결된 형태
+- MST(Minimum Spanning Tree) : Spanning Tree 중 edge weight의 합이 최소인 것.
+- Kruskal : Edge의 weight를 기준으로 정렬 O(E log E), cycle 생성 여부 검사하고 set-id를 통일 O(E + V log V), 전체(어디까지?) 시간 복잡도 O(E log E)
+- Prim : O(E log V)
+
+###### 다 한번씩 다시 보자
+
+
+
+## 네트워크
+
+#### TCP/IP
+
+- 연결지향형으로 3-way handshaking 사용하고,  흐름제어와 혼잡제어를 사용하여 신뢰성 있는 데이터 송수신이 이루어짐. 패킷은 세그먼트를 사용한다.
+- UDP에 비해 속도가 느리다는 단점이 있음. 웹HTTP통신, 이메일, 파일전송에 사용됨.
+
+#### UDP
+
+- 비연결형 프로토콜, IP 데이터그램을 캡슐화하는 방법과 연결 설정을 하지 않고 보내는 방법을 제공한다. DNS나 멀티미디어(손실된 경우에도 재전송 요청을 하지 않고 빠르게 넘어가므로)에서 사용됨. 패킷은 데이터그램을 사용한다.
+- 메세지 스트림을 통해 연결한다. 헤더에 있는 Checksum 필드로 최소한의 오류는 검출함.
+- 여러 과정을 거치지 않기 때문에 TCP보다 빠르다. 하지만 패킷 손실이 발생할 수 있다. 
+
+#### HTTP
+
+###### 동작방식
+
+- TCP와 직접 통신
+
+###### 문제점
+
+- 평문 통신이기 때문에 패킷을 수집해 도청이 가능
+  - 통신 자체를 SSL(HTTPS)나 TLS를 조합해 암호화 한다.
+  - 전송하는 콘텐츠만 암호화 한다
+- 통신 상대를 확인하지 않아 위장이 가능. DoS공격에 취약.
+  - SSL의 증명서를 이용한다.
+- 완전성을 증명할 수 없어 변조가 가능(중간자 공격)
+  - SSL에는 인증이나 암호화, 다이제스트 기능을 제공하므로 SSL을 쓴다.
+
+#### HTTPS
+
+[출처](https://brownbears.tistory.com/332)
+
+###### 동작방식
+
+- HTTP가 SSL과 통신하고 SSL이 TCP와 통신한다.
+- SSL에서 **공통키 암호화 방식**와 **공개키 암호화 방식을** 혼합한 하이브리드 암호화 방식을 사용.
+- 대칭키 암호화 방식 : 공유키를 이용해 암호화 > 공유키 전달 + 암호화된 정보 전달 > 공유키를 이용해 복호화. 키 유출 위험이 있음.
+- 공개키 암호화 방식 : 개인키를 이용해 암호화 > 암호화된 정보를 전송 + 인증기관에서 수신자에게 공유키 전달 > 공유키를 이용해 복호화. 특정 사람의 개인키와 공개키는 어떻게 생성, 관리, 배포할 것인지, 공개키가 특정한 사람의 공개키라는 것을 어떻게 보장할지에 대한 이슈가 존재.
+- 하이브리드 암호화 방식 : 위 두개의 장점을 채택. 큰 정보는 대칭키로 암호화, 암호화에 사용한 대칭키는 공개키로 암호화하여 대상에게 전달.
+
+###### 장단점
+
+- CPU나 메모리 등 리소스가 많이 필요하다. 민감한 정보를 다룰 때에만 이용.
+- 최근 HTTP 2.0이 발전하면서 HTTPS가 더 빠르다고 함.
+
+#### Chrome에서 URL을 입력하면 일어나는 일
+
+###### 브라우저에서(7계층?)
+
+1. url에 입력된 값을 브라우저에서 결정된 규칙에 따라 의미를 조사한다.
+2. 조사한 의미로 HTTP Request 메시지를 만든다.
+3. DNS서버를 조회해 ip주소를 얻은 후 만든 HTTP Request 메세지를 OS에 의뢰해 웹 서버로 전송한다.
+
+###### 프로토콜에서(LAN 어댑터, 2계층?)
+
+1. 프로토콜 스택이 브라우저로부터 HTTP Request 메시지를 받는다.
+2. 받은 HTTP Request 메시지를 패킷 속에 저장한다.
+3. 패킷에 수신처 주소 등의 제어정보를 붙인다.
+4. 패킷을 LAN 어댑터에 넘긴다.
+5. LAN 어댑터는 패킷을 전기신호로 변환하여 LAN 케이블로 송출한다.
+
+###### 허브, 스위치, 라우터에서(1계층)
+
+1. LAN 어댑터가 송신한 패킷은 스위칭 허브를 경유하여 라우터에 도착한다.
+2. 라우터는 패킷을 통신사(Provider)에게 전달한다.
+3. 인터넷으로 접속한다.
+
+###### 액세스 회선에서(Provider)
+
+1. 패킷은 인터넷의 입구에 있는 액세스 회선(통신 회선)에 의해 POP(통신사용 라우터)까지 운반된다.
+2. POP에서 인터넷의 핵심부로 들어가게 된다.
+3. 수 많은 고속 라우터를 사이로 패킷이 목적지로 향한다.
+
+###### 방화벽에서(캐시서버)
+
+1. 패킷은 웹 서버측의 LAN에 도착한다.
+2. 기다리고 있던 방화벽이 패킷을 검사한다. 
+3. 캐시서버에서 굳이 서버까지 가지 않아도 되는 경우를 골라낸다.
+
+###### 웹 서버에서
+
+1. 패킷이 물리적인 웹 서버에 도착하면 웹 서버의 프로토콜 스택이 패킷을 추출하여 메시지를 복원하고 웹 서버 어플리케이션에 넘긴다.
+2. 메시지를 받은 웹 서버 어플리케이션이 요청 메시지에 따른 데이터를 응답 메시지에 넣어 클라이언트로 회신한다.
+3. 왔던 방식대로 응답 메시지가 클라이언트에게 전달된다.
+
+
+
+## 운영체제
+
+#### 프로세스
+
+###### 기본개념
+
+- 실행중인 프로그램으로 메모리에 적재되어 CPU의 할당을 받을 수 있는 것을 말한다. 운영체제로부터 주소공간, 파일, 메모리 등을 할당 받으며 이것들을 총칭하여 프로세스라고 한다.
+- 운영체제는 프로세스의 생성과 동시에 PCB라는 특정 프로세스에 대한 중요한 정보를 저장하고 있는 운영체제의 자료구조를 사용한다.
+- 프로세스는 CPU를 할당받아 작업을 처리하다가도 프로세스 전환이 발생하면 PCB에 진행 상황을 저장하고 CPU를 반환한다.
+
+- PCB에 저장되는 정보
+  - 프로세스 식별자(PID)
+  - 프로세스 상태(new, ready 등..)
+  - 프로그램 카운터(프로세스가 다음에 실행할 명령어의 주소)
+  - CPU 레지스터
+  - CPU 스케쥴링 정보(우선순위, 스케쥴 큐에 대한 포인터 등)
+  - 메모리 관리 정보(페이지 테이블 또는 세그먼트 테이블 등)
+  - 입출력 상태 정보(입출력 장치들과 열린 파일 목록)
+  - 어카운팅 정보(사용된 CPU시간, 세간 제한, 계정정보 등)
+
+#### 스레드(Thread)
+
+###### 기본개념
+
+- 프로세스의 실행 단위. 
+- <스레드ID, 프로그램 카운터, 레지스터 집합, 스택>으로 구성.
+- 다른 스레드들과 운영체제 자원들을 공유한다.
+- 각자의 스택과 PC 레지스터(스레드의 진행상태) 값을 가진 멀티스레딩이 있다.
+
+#### 멀티 스레딩 (??????, 멀티프로세스와 비교해서 다시)
+
+###### 기본 개념
+
+- 프로세스를 이용하여 동시에 처리하던 일을 Heap을 이용한 스레드 간의 통신으로 바꾸면 메모리 공간과 시스템 자원 소모가 줄어들게 된다.
+
+###### 장단점
+
+- 메모리 공간과 시스템 자원 소모가 줄어듦.
+
+###### 문제점
+
+- 서로 다른 스레드가 데이터와 힙 영역을 공유하기 때문에 잘못된 접근을 할 수 있다.
+  - 해결 방안으로 동기화 작업이 있다. 동기화를 통해 작업 처리 순서와 공유 자원에 대한 접근을 컨트롤 하는 것이다. 이로 인해 병목현상이 발생해 성능이 저하될 수 있으므로 컨트롤의 정도를 조절한다.(???)
+- 오류로 인해 하나의 스레드가 종료되면 전체 스레드가 종료될 수 있다.
+
+#### 프로세스 스케줄링
+
+###### 기본 개념
+
+- 프로세스를 스케줄링하기 위한 Queue에는 3가지가 있다.
+  - Job Queue : 현재 시스템 내의 모든 프로세스의 집합
+  - Ready Queue : 현재 메모리 내에 있으면서 CPU를 잡아 실행되기를 기다리는 프로세스의 집합
+  - Device Queue : Device I/O 작업을 대기하고 있는 프로세스의 집합
+
+#### 스케줄러
+
+###### 기본 개념
+
+- 각각의 Queue에 프로세스를 넣어주고 빼주는 스케줄러에도 크게 3가지가 있다.
+  - 장기스케줄러 
+    - 대용량 메모리에 임시로 저장된 프로세스 중 어떤 메모리를 ready queue로 보낼지 결정한다. 
+    - 메모리와 디스크 사이의 스케줄링을 담당
+    - 프로세스에 메모리 및 각종 리소스를 할당
+    - new > ready
+  - 단기스케줄러 
+    - CPU와 메모리 사이의 스케줄링을 담당
+    - ready queue의 프로세스 중 어떤 프로세스를 running 시킬지 결정
+    - 프로세스에 CPU를 할당
+    - ready > running > waiting > ready
+    - FCFS(First Come First Served)
+      - 비선점형 스케줄링
+      - 소요시간이 긴 프로세스가 먼저 도달하여 효율성이 낮아질 수 있음
+    - SJF(Shortest Job Fisrt)
+      - 비선점형 스케줄링
+      - 도착 순서와 관계없이 CPU burst time이 짧은 프로세스에게 선 할당
+      - starvation : 사용시간이 긴 프로세스는 CPU 할당이 힘듦.
+    - SRT(Shortest Remaining time First)
+      - 선점형 스케줄링
+      - 현재 수행중인 프로세스의 남은 burst time보다 더 짧은 CPU burst time을 가진 프로세스가 도착하면 CPU를 뺏긴다.
+      - starvation + 새로운 프로세스가 도착할 때마다 스케줄링을 다시하기 떄문에 CPU burst time(CPU 사용시간)을 측정할 수 없다.
+    - Priority Scheduling
+      - 선점형 스케줄링 방식 : 더 높은 우선순위의 프로세스가 도착하면 실행 중인 프로세스를 멈추고 CPU를 할당한다.
+      - 비선점형 스케줄링 방식 : 더 높은 우선순위의 프로세스가 도착하면 Ready Queue의 Head에 넣는다.
+      - starvation + Indefinite blocking(실행 준비는 되어 있으나 CPU를 사용 못하는 프로세스를 CPU가 무기한 대기하는 상태)
+      - aging : 아무리 우선순위가 낮은 프로세스라도 오래 기다리면 우선순위를 높여주자.
+    - Round Robin
+      - 현대적인 CPU 스케줄링
+      - Time Slice에 의해 Queue로 동작한다. 
+      - Time Slice가 너무 크면 FCFS와 같아지고, 너무 작으면 context switch가 너무 많아 overhead가 발생한다.
+  - 중기스케줄러
+    - 여유 공간 마련을 위해 메모리에서 디스크로 쫓아냄 (swapping)
+    - 프로세스에게서 메모리를 deallocate
+    - 메모리에 너무 많은 프로그램이 동시에 올라가는 것을 조절한다.
+    - ready > suspended
+
+#### 프로세스 동기화
+
+... 운영체제는 머리아파서 다른거부터
+
+
+
+## 알고리즘
+
+[출처](http://ejklike.github.io/2017/03/04/sorting-algorithms-with-python.html)
+
+| Name      | Best  | Worst       | Stable | Memory   |
+| --------- | ----- | ----------- | ------ | :------- |
+| Bubble    | n     | n^2         | T      | 1        |
+| Selection | n^2   | n^2         | F      | 1        |
+| Insertion | n     | n^2         | T      | 1        |
+| Shell     | nlogn | nlog^2n     | F      | 1        |
+| Merge     | nlogn | nlogn       | T      | n        |
+| Quick     | nlogn | nlogn ~ n^2 | F      | logn ~ n |
+| Heap      |       | nlogn       |        | 1        |
+| Count     |       | n           |        | n        |
+| Radix     |       | n           |        | n        |
+
+#### Quick Sort
+
+- 피봇의 선정 기준에 따라 한쪽에 치우치면 시간 복잡도가 O(n^2)가 될 수 있음.
+- 피봇을 무작위로 정하면 성능이 잘 나옴
+
+#### Prime Number Algorithm
+
+###### 에라토스테네스의 체
+
+- n의 제곱근까지의 수에 대해서 배수들을 지우는 방법
+- 시간 복잡도 : O(loglogn)
+- 공간 복잡도 : O(n)
+
+기본개념, 동작방식, 장/단점, 문제점
+
+## 데이터베이스
+
+###### 기본 개념
+
+- 특징
+  - 독립성 : 물리적(크기가 커져도 관련 프로그램을 수정하지 않아도 된다.), 논리적(다양한 프로그램을 만족한다.)
+  - 무결성 : 데이터의 유효성을 검사한다.
+  - 보안성 : 인가된 사용자들만 데이터베이스에 접근할 수 있게 한다.
+  - 일관성 : 일관성있는 데이터를 유지하도록 관리한다.
+  - 중복 최소화 : 데이터를 통합해서 관리함으로써 중복을 피한다.
+
+- 데이터베이스의 성능은 디스크 I/O를 어떻게 줄이는지가 관건이다. 여기서부터 데이터베이스 쿼리 튜닝이 시작된다.
+
+###### 동작방식
+
+- 인덱스 : DBMS의 인덱스는 항상 정렬된 상태를 유지하기 때문에 탐색은 빠르지만 추가, 삭제, 수정이 느리다.
+- 인덱스 자료구조
+  - B+-Tree : 일반적으로 사용되는 알고리즘.  원래의 값으로 인덱싱한다.
+  - Hash : 빠른 검색이 가능하나 일부만으로 검색하고자 할 경우 사용 불가.
+- 클러스터드 인덱스 : 프라이머리 키 값이 비슷한 레코드끼리 묶어서 저장하는 것.
 - 
