--- a/6. Job/이론 정리.md
+++ b/6. Job/이론 정리.md
@@ -283,6 +283,8 @@
 
 ## 데이터베이스
 
+[B-Tree 정리](https://hyungjoon6876.github.io/jlog/2018/07/20/btree.html)
+
 ###### 기본 개념
 
 - 특징
@@ -301,4 +303,7 @@
   - B+-Tree : 일반적으로 사용되는 알고리즘.  원래의 값으로 인덱싱한다.
   - Hash : 빠른 검색이 가능하나 일부만으로 검색하고자 할 경우 사용 불가.
 - 클러스터드 인덱스 : 프라이머리 키 값이 비슷한 레코드끼리 묶어서 저장하는 것.
-- 
+- 인덱스의 장점
+  - 검색과 정렬속도 향상, 그룹화 작업 속도 향상
+- 인덱스의 단점
+  - 크기가 늘어남, 동시에 수정하는 병행성이 떨어짐, 업데이트, 추가, 삭제가 늦음, 속도가 느려짐.
